--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style.css">
 <head>
 <body>
-  <h1>Credit Card Number Validity Chcker</h1>
+  <h1>Credit Card Number Validity Checker</h1>
   <form>
     <input id="check_value" type="text" name="Number to Check" value=""/>
     <button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
