--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <link rel="stylesheet" href="style.css">
-<head>
-<body>
-  <h1>Credit Card Number Validity Chcker</h1>
-  <form>
-    <input id="check_value" type="text" name="Number to Check" value=""/>
-    <button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
-  </form>
-  <script src="script.js" charset="utf-8"></script>
-</body>
+
+  <head>
+
+  <body>
+    <h1>Credit Card Number Validity Chcker</h1>
+    <form>
+      <input id="check_value" type="number" name="Number to Check" value="" />
+      <button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
+    </form>
+    <script src="script.js" charset="utf-8"></script>
+  </body>
+
 </html>
