Fixed alignment,Rectified spelling mistake,Added Title

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <link rel="stylesheet" href="style.css">
-<head>
+    <link rel="stylesheet" href="style.css">
+    <title>Credit Card Number Validator</title>
+
+</head>
+
 <body>
-  <h1>Credit Card Number Validity Chcker</h1>
-  <form>
-    <input id="check_value" type="text" name="Number to Check" value=""/>
-    <button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
-  </form>
-  <script src="script.js" charset="utf-8"></script>
+    <h1 class="title">Credit Card Number Validity Checker</h1>
+    <form>
+        <input id="check_value" type="text" name="Number to Check" value="" />
+        <button id="verify_button" class="alignButton" type="button" name="verify" onclick="luhn_algo()">Verify</button>
+    </form>
+    <script src="script.js" charset="utf-8"></script>
 </body>
+
 </html>
