--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 class="title">Credit Card Number Validity Checker</h1>
     <form>
-        <input id="check_value" type="text" name="Number to Check" value="" />
+        <input id="check_value" type="number" name="Number to Check" value="" />
         <button id="verify_button" class="alignButton" type="button" name="verify" onclick="luhn_algo()">Verify</button>
     </form>
     <script src="script.js" charset="utf-8"></script>
