Alling form elements to center

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="style.css">
 <head>
-<body>
+<body class="centertext">
   <h1>Credit Card Number Validity Chcker</h1>
   <form>
     <input id="check_value" type="text" name="Number to Check" value=""/>
