--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Credit Card Validity CHecker</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" ></script>
 <head>
 <body class="centertext">
-  <h1>Credit Card Number Validity Chcker</h1>
+  <h1>Credit Card Number Validity Checker</h1>
   <form>
-    <input id="check_value" type="text" name="Number to Check" value=""/>
+    <input id="check_value" type="number" name="Number to Check" value=""/>
     <button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
   </form>
   <script src="script.js" charset="utf-8"></script>
