--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 <head>
 <body>
-  <h1>Credit Card Number Validity Chcker</h1>
+  <h1>Credit Card Number Validity Checker</h1>
   <form>
     <input id="check_value" type="number" name="Number to Check" value=""/>
     <br>
