--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+<Title>CreditCardVerifier </Title>
 <head>
 <body>
   <h1>Credit Card Number Validity Checker</h1>
