Upadated the UI

--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,22 @@
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-  <title>CreditCardVerifier</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <title>
+    CreditCardVerifier
+  </title>
 <head>
 <body>
-  <h1>Credit Card Number Validity Checker</h1>
-  <form>
-    <input id="check_value" type="number" name="Number to Check" value=""/>
-    <br>
-    <button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
-  </form>
+  <div class="container content">
+    <h1>Credit Card Number Validity Checker</h1>
+    <hr>
+    <form>
+      <input id="check_value" type="number" name="Number to Check" value=""/>
+      <br><br>
+      <button class="btn btn-default btn-lg" id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
+    </form>
+    <hr>
+  </div>
   <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
