--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <title> CreditCardVerifier </title>
 <head>
 <body>
-  <h1>Credit Card Number Validity Chcker</h1>
+  <h1>Credit Card Number Validity Checker</h1>
   <form>
     <input id="check_value" type="text" name="Number to Check" value=""/>
     <button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
