--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+<Title>CreditCardVerifier </Title>
 <head>
 <body>
   <h1>Credit Card Number Validity Checker</h1>
   <form>
-    <input id="check_value" type="text" name="Number to Check" value=""/>
+    <input id="check_value" type="numbers" name="Number to Check" value=""/>
     <button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
   </form>
   <script src="script.js" charset="utf-8"></script>
