Added info about Luhn's algorithm

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,17 @@
       <br><br>
       <button class="btn btn-default btn-lg" id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
     </form>
+    <br>
+    <p>
+      This program works on Luhn algorithm, also known as the modulus 10 or mod 10 algorithm, which is a simple checksum formula used to validate a variety of identification numbers, such as credit card numbers, IMEI numbers, Canadian Social Insurance Numbers.
+    </p>
+    <p>
+      For more info-
+      <br>
+      <a href="https://www.geeksforgeeks.org/luhn-algorithm/">
+        <button class="btn btn-default btn-sm">Click here</button>
+      </a>
+    </p>
     <hr>
   </div>
   <script src="script.js" charset="utf-8"></script>
