--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Credit Card Number Validity Checker</h1>
   <form>
     <input id="check_value" type="numbers" name="Number to Check" value=""/>
-    <button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
+    </br><button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
   </form>
   <script src="script.js" charset="utf-8"></script>
 </body>
