--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 <body>
   <h1>Credit Card Number Validity Checker</h1>
-  <form>
+  <form align="center">
     <input id="check_value" type="numbers" name="Number to Check" value=""/>
     </br><button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
   </form>
