--- a/src/index.html
+++ b/src/index.html
@@ -14,21 +14,22 @@
     <h1>Credit Card Number Validity Checker</h1>
     <hr>
     <form>
-    <input id="check_value" type="text" name="Number to Check" value=""/>
+    <input id="check_value" type="text" name="Number to Check" value=""/>&nbsp;&nbsp;
     <button id="verify_button" type="button" name="verify" onclick='verify_number()'>Verify</button>
   </form>
+  <div class="output">
   <p id='is_card_valid'> <strong>VALID: </strong><span id='card-valid-value'> </span></p>
   <p id='card_type'> <strong>TYPE: </strong><span id='card-type-value'></span> </p>
-
+</div>
     <br>
     <p>
       This program works on Luhn algorithm, also known as the modulus 10 or mod 10 algorithm, which is a simple checksum formula used to validate a variety of identification numbers, such as credit card numbers, IMEI numbers, Canadian Social Insurance Numbers.
     </p>
     <p>
       For more info-
-      <br>
+      <br><br>
       <a href="https://www.geeksforgeeks.org/luhn-algorithm/">
-        <button class="btn btn-default btn-sm">Click here</button>
+        <button id="clickHere" class="btn btn-default btn-sm">Click here</button>
       </a>
     </p>
     <hr>
