closed head tag

--- a/src/index.html
+++ b/src/index.html
@@ -11,62 +11,62 @@
     CreditCardVerifier
   </title>
 
-  <head>
+</head>
 
-  <body>
-    <div class="container content">
-      <h1>Credit Card Number Validity Checker</h1>
-      <hr>
-      <form>
-        <input id="check_value" type="text" name="Number to Check" value="" />&nbsp;&nbsp;
-        <button id="verify_button" type="button" name="verify" onclick='verify_number()'>Verify</button>
-      </form>
-      <div class="output">
-        <p id='is_card_valid'> <strong>VALID: </strong><span id='card-valid-value'> </span></p>
-        <p id='card_type'> <strong>TYPE: </strong><span id='card-type-value'></span> </p>
-      </div>
-      <br>
-      <div class="info">
-        <p>
-          This program works on <b style="color:red;">Luhn algorithm</b>, also known as the modulus 10 or mod 10
-          algorithm, which is a
-          simple
-          checksum formula used to validate a variety of identification numbers, such as credit card numbers, IMEI
-          numbers, Canadian Social Insurance Numbers.
-        </p>
-      </div>
-
-      <p>
-        For more info-
-        <br><br>
-        <a href="https://www.geeksforgeeks.org/luhn-algorithm/">
-          <button id="clickHere" class="btn btn-link btn-sm">Click here</button>
-        </a>
-      </p>
-      <hr>
+<body>
+  <div class="container content">
+    <h1>Credit Card Number Validity Checker</h1>
+    <hr>
+    <form>
+      <input id="check_value" type="text" name="Number to Check" value="" />&nbsp;&nbsp;
+      <button id="verify_button" type="button" name="verify" onclick='verify_number()'>Verify</button>
+    </form>
+    <div class="output">
+      <p id='is_card_valid'> <strong>VALID: </strong><span id='card-valid-value'> </span></p>
+      <p id='card_type'> <strong>TYPE: </strong><span id='card-type-value'></span> </p>
     </div>
-    <script type='application/javascript'>
+    <br>
+    <div class="info">
+      <p>
+        This program works on <b style="color:red;">Luhn algorithm</b>, also known as the modulus 10 or mod 10
+        algorithm, which is a
+        simple
+        checksum formula used to validate a variety of identification numbers, such as credit card numbers, IMEI
+        numbers, Canadian Social Insurance Numbers.
+      </p>
+    </div>
 
-      function verify_number() {
-        // function to run both Luhn's Algorithm check as well as scheme matcher
-        const number = document.getElementById("check_value").value;
+    <p>
+      For more info-
+      <br><br>
+      <a href="https://www.geeksforgeeks.org/luhn-algorithm/">
+        <button id="clickHere" class="btn btn-link btn-sm">Click here</button>
+      </a>
+    </p>
+    <hr>
+  </div>
+  <script type='application/javascript'>
 
-        // output elements
-        var card_valid_value = document.querySelector("#card-valid-value");
-        var card_type_value = document.querySelector("#card-type-value");
+    function verify_number() {
+      // function to run both Luhn's Algorithm check as well as scheme matcher
+      const number = document.getElementById("check_value").value;
 
-        // validate and match
-        const is_valid_luhns = luhn_algo(number);
-        const scheme = assign_scheme(number);
+      // output elements
+      var card_valid_value = document.querySelector("#card-valid-value");
+      var card_type_value = document.querySelector("#card-type-value");
 
-        console.log(is_valid_luhns, scheme);
+      // validate and match
+      const is_valid_luhns = luhn_algo(number);
+      const scheme = assign_scheme(number);
 
-        // show output values
-        card_valid_value.innerHTML = is_valid_luhns ? "YES" : "NO";
-        card_type_value.innerHTML = scheme;
-      };
+      console.log(is_valid_luhns, scheme);
 
-    </script>
-  </body>
+      // show output values
+      card_valid_value.innerHTML = is_valid_luhns ? "YES" : "NO";
+      card_type_value.innerHTML = scheme;
+    };
+
+  </script>
+</body>
 
 </html>
