--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <h1>Credit Card Number Validity Checker</h1>
       <hr>
       <form>
-        <input id="check_value" type="text" name="Number to Check" value="" />&nbsp;&nbsp;
+        <input  id="check_value" type="text" name="Number to Check" value="" />&nbsp;&nbsp;
         <button id="verify_button" type="button" name="verify" onclick='verify_number()'>Verify</button>
       </form>
       <div class="output">
@@ -62,7 +62,7 @@
       <br>
       <div class="info">
         <p>
-          This program works on <b style="color:red;">Luhn algorithm</b>, also known as the modulus 10 or mod 10
+          This program works on <b style="color:teal;">Luhn algorithm</b>, also known as the modulus 10 or mod 10
           algorithm, which is a
           simple
           checksum formula used to validate a variety of identification numbers, such as credit card numbers, IMEI
@@ -70,7 +70,7 @@
         </p>
       </div>
 
-      <p>
+      <p style="font-size: 5mm;font-weight:bold;color:blanchedalmond">
         For more info-
         <br><br>
         <a href="https://www.geeksforgeeks.org/luhn-algorithm/">
