--- a/index.html
+++ b/index.html
@@ -104,5 +104,9 @@
       </p>
       <hr />
     </div>
+    <footer style="text-align: center; font-weight: bold; color:blanchedalmond">
+      <p>acmpesuecc</p>
+      <p><a href="https://github.com/acmpesuecc/CreditCardVerifier">Github Repository</a></p>
+    </footer>
   </body>
 </html>
