--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       </p>
       <hr />
     </div>
-    <footer style="text-align: center; font-weight: bold; color:blanchedalmond">
+    <footer style="text-align: center; font-weight: bold;font-size: 5mm;">
       <p>acmpesuecc</p>
       <p><a href="https://github.com/acmpesuecc/CreditCardVerifier">Github Repository</a></p>
     </footer>
