--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <br />
       <div class="info">
         <p>
-          This program works on <b style="color: teal"><a href=https://en.wikipedia.org/wiki/Luhn_algorithm>Luhn algorithm</a></b>, also
+          This program works on <b style="color: teal"><a href="https://en.wikipedia.org/wiki/Luhn_algorithm">Luhn algorithm</a></b>, also
           known as the modulus 10 or mod 10 algorithm, which is a simple
           checksum formula used to validate a variety of identification numbers,
           such as credit card numbers, IMEI numbers, Canadian Social Insurance
