Valid and Type fields now show up after pressing verify

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           Verify
         </button>
       </form>
-      <div class="output">
+      <div class="output" id="output">
         <p id="is_card_valid">
           <strong>VALID: </strong><span id="card-valid-value"> </span>
         </p>
