Added examples of other use cases

--- a/index.html
+++ b/index.html
@@ -84,6 +84,27 @@
           </tr>
         </table>
       </div>
+      <br>
+      <div class="container content">
+        <table style="width: 100%; color: white">
+          <p>What else can I Verify?</p>
+          <caption style="text-align: center; color: white">
+            Using online tools similar to ours, you can also verify the validity of the following!
+          </caption>
+          <tr>
+            <td>IMEI Numbers</td>
+            <td>Aadhar Card Number</td>
+          </tr>
+          <tr>
+            <td>PAN Card Number</td>
+            <td>Phone Number</td>
+          </tr>
+          <tr>
+            <td>Vehicle Registeration</td>
+            <td>and more...</td>
+          </tr>
+        </table>
+      </div>
       <br />
       <div class="info">
         <p>
