--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="https://static.thenounproject.com/png/3893294-200.png" type="image/x-icon">
     <title>CreditCardVerifier</title>
   </head>
 
@@ -84,10 +85,31 @@
           </tr>
         </table>
       </div>
+      <br>
+      <div class="container content">
+        <table style="width: 100%; color: white">
+          <p>What else can I Verify?</p>
+          <caption style="text-align: center; color: white">
+            Using online tools similar to ours, you can also verify the validity of the following!
+          </caption>
+          <tr>
+            <td>IMEI Numbers</td>
+            <td>Aadhar Card Number</td>
+          </tr>
+          <tr>
+            <td>PAN Card Number</td>
+            <td>Phone Number</td>
+          </tr>
+          <tr>
+            <td>Vehicle Registeration</td>
+            <td>and more...</td>
+          </tr>
+        </table>
+      </div>
       <br />
       <div class="info">
         <p>
-          This program works on <b style="color: teal">Luhn algorithm</b>, also
+          This program works on <b style="color: teal"><a target="_blank" title="Learn more about Luhn Algorithm!" href="https://en.wikipedia.org/wiki/Luhn_algorithm" id="luhnlink">Luhn algorithm</a></b>, also
           known as the modulus 10 or mod 10 algorithm, which is a simple
           checksum formula used to validate a variety of identification numbers,
           such as credit card numbers, IMEI numbers, Canadian Social Insurance
