--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="https://static.thenounproject.com/png/3893294-200.png" type="image/x-icon">
     <title>CreditCardVerifier</title>
   </head>
 
