Added support for RuPay, Discover and JCB cards

--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
             <td>Visa</td>
             <td>4111111111111111</td>
           </tr>
+          <tr>
+            <td>RuPay</td>
+            <td>6521568382674821</td>
+          </tr>
+          <tr>
+            <td>JCB</td>
+            <td>3578554737605008</td>
+          </tr>
+          <tr>
+            <td>Discover</td>
+            <td>6011086590451053</td>
+          </tr>
         </table>
       </div>
       <br />
