--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <div class="container content">
-      <h1>Credit Card Number Validity Checker</h1>
+      <h1>Test1</h1>
       <hr />
       <form>
         <input
