--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <link
+    rel="icon"
+    type="image/x-icon"
+    href="favicon1.ico"
+    />
+    <title>CC VERIFICATION</title>
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
       integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
@@ -22,7 +28,7 @@
 
   <body>
     <div class="container content">
-      <h1>Test1</h1>
+      <h1>Credit Card Number Validity Checker</h1>
       <hr />
       <form>
         <input
