--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <input id="check_value" type="numbers" name="Number to Check" value=""/>
     </br><button id="verify_button" type="button" name="verify" onclick="luhn_algo()">Verify</button>
   </form>
+  <a href="https://en.wikipedia.org/wiki/Luhn_algorithm">
+          <center><button id="clickHere" class="btn btn-link btn-sm">Click here</button>  </center>
+        </a>
   <script src="script.js" charset="utf-8"></script>
 </body>
 </html>
