Added verification for Aadhar Number

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           Verify
         </button>
       </form>
-      <div class="output">
+      <div class="output" id="output">
         <p id="is_card_valid">
           <strong>VALID: </strong><span id="card-valid-value"> </span>
         </p>
@@ -81,6 +81,27 @@
           <tr>
             <td>Visa</td>
             <td>4111111111111111</td>
+          </tr>
+        </table>
+      </div>
+      <br>
+      <div class="container content">
+        <table style="width: 100%; color: white">
+          <p>What else can I Verify?</p>
+          <caption style="text-align: center; color: white">
+            Using online tools similar to ours, you can also verify the validity of the following!
+          </caption>
+          <tr>
+            <td><a onclick="Aadharcheck()">Aadhar Card Number</a></td>
+            <td>Vehicle Registeration</td>
+          </tr>
+          <tr>
+            <td>PAN Card Number</td>
+            <td>Phone Number</td>
+          </tr>
+          <tr>
+            <td>IMEI Number</td>
+            <td>and more...</td>
           </tr>
         </table>
       </div>
