--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <link
+    rel="icon"
+    type="image/x-icon"
+    href="favicon1.ico"
+    />
+    <title>CC VERIFICATION</title>
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
       integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
@@ -87,7 +93,7 @@
       <br />
       <div class="info">
         <p>
-          This program works on <b style="color: teal">Luhn algorithm</b>, also
+          This program works on <b style="color: teal"><a href="https://en.wikipedia.org/wiki/Luhn_algorithm">Luhn algorithm</b></a>, also
           known as the modulus 10 or mod 10 algorithm, which is a simple
           checksum formula used to validate a variety of identification numbers,
           such as credit card numbers, IMEI numbers, Canadian Social Insurance
