--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
       <form>
           <label for="check_value">Card Number:</label><br>
           <input type="text" id="check_value" name="Number to Check"><br>
-          <label for="Expiry">Expiry(MM/YYYY):</label><br>
-          <input type="text" id="Expiry" name="Year to check">
+          <label for="ExpiryMonth">Expiry(MM):</label><br>
+          <input type="text" id="ExpiryMonth" name="Month to check"><br>
+          <label for="ExpiryYear">Expiry(YYYY):</label><br>
+          <input type="text" id="ExpiryYear" name="Year to check">
         &nbsp;&nbsp;
         </form> <br>
         <button
