--- a/index.html
+++ b/index.html
@@ -25,12 +25,18 @@
       <h1>Credit Card Number Validity Checker</h1>
       <hr />
       <form>
-          <label for="check_value">Card Number:</label><br>
-          <input type="text" id="check_value" name="Number to Check"><br>
+	<label for="check_value"><b>Number to Check:</b></label><br>
+	<input
+          id="check_value"
+          type="text"
+          name="Number to Check"
+          value=""><br>
+          
           <label for="ExpiryMonth">Expiry(MM):</label><br>
           <input type="text" id="ExpiryMonth" name="Month to check"><br>
           <label for="ExpiryYear">Expiry(YYYY):</label><br>
-          <input type="text" id="ExpiryYear" name="Year to check">
+          <input type="text" id="ExpiryYear" name="Year to check"><br>
+	  
         &nbsp;&nbsp;
         </form> <br>
         <button
