--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </tr>
           <tr>
             <td>Diners Club</td>
-            <td>30569309025904</td>
+            <td>3056930902590400</td>
           </tr>
           <tr>
             <td>Discover</td>
@@ -87,6 +87,14 @@
           <tr>
             <td>Visa</td>
             <td>4111111111111111</td>
+          </tr>
+          <tr>
+            <td>Union Pay</td>
+            <td>9111111111222222</td>
+          </tr>
+          <tr>
+            <td>RuPay</td>
+            <td>6027777777776666</td>
           </tr>
         </table>
       </div>
