adding new card support

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
             <td>Visa</td>
             <td>4111111111111111</td>
           </tr>
+          <tr>
+            <td>sudexo card</td>
+            <td>3214213412341234</td>
+          </tr>
         </table>
       </div>
       <br>
