warning due to non-standard zoom present in bootstrap fixed with local copied css with necessary changes

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
     href="favicon1.ico"
     />
     <title>CC VERIFICATION</title>
-    <link
+    <!-- <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+      href="bootstrap.min.css"
       integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
       crossorigin="anonymous"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="bootstrap.css"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Grandstander&family=Rajdhani&display=swap"
