--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
     />
     
     <title>CreditCardVerifier</title>
+
+    <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5SV5N6SH20"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5SV5N6SH20');
+    </script>
+        </script>  
   </head>
 
   <body>
