--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Grandstander&family=Rajdhani&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script src="./src/js/script.js" type="application/javascript"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
