--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
   </head>
 
   <body>
-    
-    <div class="container content">
+
+
+    <div class="container 	content">
+	
       <h1>Credit Card Number Validity Checker</h1>
       <hr />
         <input
@@ -112,7 +114,7 @@
         </p>
       </div>
 
-      <p style="font-size: 5mm;font-weight:bold;color:blanchedalmond">
+      <p style="font-size: 5mm;font-weight:bold;color:black">
         For more info-
         <br /><br />
         <a href="https://www.geeksforgeeks.org/luhn-algorithm/">
