shifted git repository to inside the pop up

--- a/index.html
+++ b/index.html
@@ -84,22 +84,11 @@
     <br />
 
 
-    <!-- <div class="info"> -->
-    <!--   <p> -->
-    <!--     This program works on <b style="color: teal"><a href="https://en.wikipedia.org/wiki/Luhn_algorithm">Luhn -->
-    <!--         algorithm</b></a>, also -->
-    <!--     known as the modulus 10 or mod 10 algorithm, which is a simple -->
-    <!--     checksum formula used to validate a variety of identification numbers, -->
-    <!--     such as credit card numbers, IMEI numbers, Canadian Social Insurance -->
-    <!--     Numbers. -->
-    <!--   </p> -->
-    <!-- </div> -->
 
     <button id="clickHere" class="how-it-works btn btn-link btn-sm">How It Works?</button>
   </div>
   <footer style="text-align: center; font-weight: bold;font-size: 5mm;">
     <p>acmpesuecc</p>
-    <p><a href="https://github.com/acmpesuecc/CreditCardVerifier">Github Repository</a></p>
   </footer>
 
 
@@ -111,7 +100,7 @@
         known as the modulus 10 or mod 10 algorithm, which is a simple
         checksum formula used to validate a variety of identification numbers,
         such as credit card numbers, IMEI numbers, Canadian Social Insurance
-        Numbers.
+        Numbers. Check out the git repository <a href="https://github.com/acmpesuecc/CreditCardVerifier">here!</a>
       </p>
       <button class="close-popup">
         Close
