--- a/index.html
+++ b/index.html
@@ -26,25 +26,13 @@
       rel="stylesheet"
     />
     
-    <title>CreditCardVerifier</title>
-
-    <!-- Google tag (gtag.js) -->
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5SV5N6SH20"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-5SV5N6SH20');
-    </script>
-        </script>  
+    <!-- <title>CreditCardVerifier</title> -->
   </head>
 
   <body>
     
     <div class="container content">
-      <h1>Credit Card Number Validity Checker</h1>
+      <h1 style="font-family: Times New Roman">Credit Card Number Validity Checker</h1>
       <hr />
         <input
           id="check_value"
@@ -67,6 +55,9 @@
         <p id="card_type">
           <strong>TYPE: </strong><span id="card-type-value"></span>
         </p>
+        <p id="card_industry">
+          <strong>INDUSTRY: </strong><span id="card-industry-value"></span>
+        </p>
       </div>
       <br /><br />
       <div class="container content">
@@ -80,7 +71,7 @@
           </tr>
           <tr>
             <td>American Express</td>
-            <td>371449635398431</td>
+            <td>3714496353984314</td>
           </tr>
           <tr>
             <td>Diners Club</td>
