added background + spinning buttons + UI changes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 
 
-    <button id="clickHere" class="how-it-works btn btn-link btn-sm">How It Works?</button>
+    <button id="clickHere" class="how-it-works btn btn-sm">How It Works?</button>
   </div>
   <footer style="text-align: center; font-weight: bold;font-size: 5mm;">
     <p>acmpesuecc</p>
