--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     type="image/x-icon"
     href="favicon1.ico"
     />
+      
     <title>CC VERIFICATION</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
       integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
       crossorigin="anonymous"
-    />
+    /> 
     <link
       href="https://fonts.googleapis.com/css2?family=Grandstander&family=Rajdhani&display=swap"
       rel="stylesheet"
@@ -66,6 +67,8 @@
         </p>
         <p id="card_type">
           <strong>TYPE: </strong><span id="card-type-value"></span>
+        <span><img id="card-type-img" 
+             width="55%" height=auto></span>   
         </p>
       </div>
       <br /><br />
